@@ -5,6 +5,7 @@ import lombok.AllArgsConstructor;
 import lombok.Getter;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 /**
@@ -18,7 +19,7 @@ public enum TabListEnum {
     /**
      * 第一层提醒
      */
-    FIRST(List.of("reload"), 0, null, 1),
+    FIRST(Collections.singletonList("reload"), 0, null, 1),
 
     ;
 
